--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-datasets/*.csv linguist-language=Python
+*.* linguist-language=Python
